syntax = "proto3";

package org.infinispan.protostream.lib;

message Base2 {

    optional string base2String = 1;
}
